2006-03-30  Egbert Eich  <eich_at_freedesktop_dot_org>

	* include/colormapst.h:
	* include/pixmapstr.h:
	* mi/miwideline.c: (miFillRectPolyHelper), (miLineArc):
	Fixes for some vsw4 failures on 64bit BE platforms such as
	PPC64 and s390x. Provided by Hong Bo Peng of IBM (slightly
	modified). Patches try to resolve some of the careless
	mixtures of ulong and uint (which are different size on
	64bit). 
	> This patch will break the driver ABI! <
	Bugzilla #6438.
	
2006-03-29  Kristian Høgsberg  <krh@redhat.com>

	* GL/glx/indirect_dispatch.c:
	* GL/glx/indirect_dispatch_swap.c:
	* GL/glx/indirect_size_get.c: Regenerate these files using updated
	scripts to avoid unused variable warnings.

2006-03-29  Eric Anholt  <anholt@FreeBSD.org>

	* exa/exa_accel.c: (exaPutImage), (exaGetImage):
	Bug #2986: Add PutImage acceleration for the ZPixmap,
	planeMask ~= FB_ALLONES, bitsPerPixel >= 8, GXcopy cases.  With the
	radeon driver on my machine, this gives about 10% speedup in PutImage
	10x10 and 500x500, and 40% speedup for 10x10 ShmPutImage, up to 65%
	improvement in 500x500 ShmPutImage.  Also fixes a crasher in GetImage
	that slipped in at the last minute.

2006-03-29  Eric Anholt  <anholt@FreeBSD.org>

	* hw/kdrive/ephyr/ephyr_draw.c: (ephyrDownloadFromScreen),
	(ephyrUploadToScreen), (ephyrDrawInit):
	Add an UploadToScreen implementation, for testing PutImage support, and
	make the DownloadFromScreen more robust.

2006-03-29  Eric Anholt  <anholt@FreeBSD.org>

	* exa/exa_accel.c: (exaGetImage):
	* exa/exa_priv.h:
	Bug #2986: Add acceleration of GetImage using DownloadFromScreen for the
	ZPixmap, planeMask ~= FB_ALLONES, bitsPerPixel >= 8 case.  I'm pretty
	convinced that this is the only case that we care about at all.  Tested
	with xwd -root and xwd on a gnome-terminal, in a composited environment
	or not.

2006-03-29  Eric Anholt  <anholt@FreeBSD.org>

	* hw/kdrive/ephyr/ephyr_draw.c: (ephyrDownloadFromScreen),
	(ephyrDrawInit), (exaDDXDriverInit):