@@ -2,7 +2,12 @@ SUBDIRS = grammar slang
 
 noinst_LTLIBRARIES = libshader.la
 
-AM_CFLAGS = $(DIX_CFLAGS) @SERVER_DEFINES@ @MODULE_DEFINES@ @LOADER_DEFINES@
+AM_CFLAGS = \
+	$(DIX_CFLAGS) \
+	@SERVER_DEFINES@ \
+	@MODULE_DEFINES@ \
+	@LOADER_DEFINES@ \
+	@GLX_DEFINES@
 
 INCLUDES = -I@MESA_SOURCE@/include \
            -I../X \
