@@ -1,6 +1,11 @@
 noinst_LTLIBRARIES = libslang.la
 
-AM_CFLAGS = $(DIX_CFLAGS) @SERVER_DEFINES@ @MODULE_DEFINES@ @LOADER_DEFINES@
+AM_CFLAGS = \
+	$(DIX_CFLAGS) \
+	@SERVER_DEFINES@ \
+	@MODULE_DEFINES@ \
+	@LOADER_DEFINES@ \
+	@GLX_DEFINES@
 
 INCLUDES = -I@MESA_SOURCE@/include \
            -I../grammar \
